# 23S-CSE180-Project

./: .gitignore  README.md
FPWorkSpace/src/finalproject/: CMakeLists.txt  CMakeLists.txt.old  package.xml
FPWorkSpace/src/finalproject/include/finalproject/: navigation.hpp
FPWorkSpace/src/finalproject/src/: costmap_sus.cpp  findExtraPost.cpp  gpt.cpp  mapOutputjust0_100.txt  map_output.txt  map_subscriber.cpp  myTestNavigator.cpp  navigation.cpp  pose_subscriber.cpp  scan_subscriber.cpp  testpackage.cpp  tfstatic_subscriber.cpp
FPWorkSpace/src/finalproject/src/otherWorthyButUnfinishedSolutions/: gpt.cpp  map_subscriber.cpp  myTestNavigator1.cpp  testpackage.cpp  tfstatic_subscriber.cpp
FPWorkSpace/src/finalproject/src/txtFolders/: GlobalCostMapOutput.txt  GlobalCostMapOutputAtTimeOne.txt  scanSubOutput.txt
MRTP/src/gazeboenvs/models/turtlebot3_world/: model.sdf
